fix gradle build files